fix(footer): fix overflow height of footer caused by line-height

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -38,7 +38,7 @@ a {
 }
 
 #main::after {
-    height: 104px;
+    height: 120px;
     content: "";
     display: block;
     visibility: hidden; 
