--- a/assets/sass/_partial/_footer.scss
+++ b/assets/sass/_partial/_footer.scss
@@ -8,7 +8,7 @@
     width: 100%;
     position: absolute;
     bottom: 0px;
-    height: 94px;
+    height: 110px;
 }
 
 .copyright {
